Update srcset file

--- a/191024_srcset_practice/index.html
+++ b/191024_srcset_practice/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/img_x1.jpg" srcset="img/img_x1.jpg 1920w, img/img_x2.jpg 2560w, img/img_m.jpg 375w" alt="">
+    <img src="img/img_x1.jpg" srcset="img/img_x1.jpg 1x, img/img_x2.jpg 2x, img/img_m.jpg 768w" alt="">
 </body>
 </html>
